toolchain: improve Qt integration with bazel
Create custom rules to include and generate required qt files

--- a/examples/qt/README
+++ b/examples/qt/README
@@ -1,5 +1,13 @@
 # How to Run
 
+Run the following command to compile for x86:
+
 ```bash
 bazel run //examples/qt:bin
+```
+
+Run the following command to compile for aarch64:
+
+```bash
+bazel build //examples/qt:bin --platforms=//bazel/platforms:aarch64_linux
 ```
